--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <a href="sys_admin.html">System Administration</a>
+        <a href="networking.html">Networking and Distributed Computing</a>
+        <a href="operations.html">Operations Research</a>
         
         This webpage will be dedicated to showing a little bit about my college career thus far.
     </body>
