--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <a href="sys_admin.html">System Administration</a>
-        <a href="networking.html">Networking and Distributed Computing</a>
-        <a href="operations.html">Operations Research</a>
-        
+        <ul>
+            <li><a href="sys_admin.html">System Administration</a></li>
+            <li><a href="networking.html">Networking and Distributed Computing</a></li>
+            <li><a href="operations.html">Operations Research</a></li>
+            <li><a href="extra.html">Skills</a></li>
+        </ul>
         This webpage will be dedicated to showing a little bit about my college career thus far.
     </body>
 </html>
+
