Added header and paragraph

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
         <title>My Webpage</title>
     </head>
     <body>
+        <h1>My Best Courses</h1>
         <ul>
             <li><a href="sys_admin.html">System Administration</a></li>
             <li><a href="networking.html">Networking and Distributed Computing</a></li>
             <li><a href="operations.html">Operations Research</a></li>
             <li><a href="extra.html">Skills</a></li>
         </ul>
-        This webpage will be dedicated to showing a little bit about my college career thus far.
+        <div>
+            <p>
+                As a sophomore computer science major, I have been documenting my experiences and grades in my most challenging courses
+                upon completion.
+            </p>
+        </div>
     </body>
 </html>
 
