--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
             <li><a href="extra.html">Skills</a></li>
         </ul>
         <div>
+            <h1>My </h1>
             <p>
                 As a sophomore computer science major, I have been documenting my experiences and grades in my most challenging courses
-                upon completion.
+                upon completion. Most of this documentation includes:
+                <ul>
+                    <li>Assignments and Solutions</li>
+                    <li>Projects and Goals</li>
+                    <li>Overviews</li>
+                </ul>
+                Aside from these attributes, I also keep track of my grade for each course and calculate my department GPA after completion.
             </p>
         </div>
     </body>
