sys_admin complete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li>Projects and Goals</li>
                     <li>Overviews</li>
                 </ul>
-                Aside from these attributes, I also keep track of my grade for each course and calculate my department GPA after completion.
+                Aside from these attributes, I also keep track of my grade for each course and calculate my department GPA after a completed semester.
             </p>
         </div>
     </body>
