--- a/sys_admin.html
+++ b/sys_admin.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>A Course in System Administration</title>
+        <title>System Administration</title>
     </head>
     <body>
-        
+        <h1>System Administration</h1>
+        <h3>Table of Contents</h3>
+        <ul>
+            <li><a href="#homework">Homework</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#summary">Summary</a></li>
+        </ul>
+
+        <h3 id="homework">Homework</h3>
+        <ol>
+            <li>List different attributes, such as package manager, price, and target audience for different Linux distributions</li>
+            <li>Gain practice with commands like cd, ls, find, grep, du, wc, head, tail, and tar as well as gain a general understanding of the format of bash commands</li>
+            <li>Gain experience in account management by creating accounts on a Fedora VirtualBox and editing priviledges, setting up SSH, and modifying skeleton directories</li>
+            <li>
+                Write 2 bash scripts:
+                <ol>
+                    <li>Backup all files within a user's home directory that have been edited within the last 24 hours and create an optional argument to install a cron job to automate this task. Make sure to compress the files into a tarball in a hidden directory</li>
+                    <li>Get the information on a single file such as format, size, and compression ratio based on user specified arguments</li>
+                </ol>
+            </li>
+            <li>Add all commands learned to a cheat sheet throughout the semester.</li>
+        </ol>
+
+        <h3 id="projects">Projects</h3>
+        <ol>
+            <li>
+                Install a JupyterHub server on a Fedora VirtualBox instance with the following configurations:
+                <ul>
+                    <li>Make the server a systemd service so it can start up on boot of the instance</li>
+                    <li>Make sure Google OAuth is working correctly to only allow users with our school email domain</li>
+                    <li>Create a shared directory for all JupyterHub users but only allow each user access to their own files (sticky bit)</li>
+                    <li>Install more packages onto the server and have it run on https instead of http</li>
+                    <li>Install more languages onto the server instead of only Python3</li>
+                </ul>
+            </li>
+            <li>
+                Set up a network of computers and printers using AD DC, DNS, NFS, DHCP, Kerberos, and Samba
+                <ul>
+                    <li>1 Fedora server, 1 Fedora Workstation, and 1 Windows machine</li>
+                    <li>Make sure users can access there files on all computers and print from all computers</li>
+                </ul>
+            </li>
+        </ol>
+
+        <h3 id="summary">Summary</h3>
+        <p>
+            My time in this class was amazing even though the last project was extremely taxing to complete. I believe that I learned a lot 
+            about the bash terminal and bash scripting as well as how to configure services and software on my computer. 
+            My final grades for the course were as follows:
+            <table>
+                <tr>
+                    <th>Assignment</th>
+                    <th>Grade</th>
+                </tr>
+                <tr>
+                    <th>Homework 1</th>
+                    <th>50 / 50</th>
+                </tr>
+                <tr>
+                    <th>Homework 2</th>
+                    <th>44 / 50</th>
+                </tr>
+                <tr>
+                    <th>Homework 3</th>
+                    <th>41.5 / 50</th>
+                </tr>
+                <tr>
+                    <th>Homework 4</th>
+                    <th>45 / 50</th>
+                </tr>
+                <tr>
+                    <th>Homework 5</th>
+                    <th>49 / 50</th>
+                </tr>
+                <tr>
+                    <th>CheatSheet</th>
+                    <th>50 / 50</th>
+                </tr>
+                <tr>
+                    <th>Project 1</th>
+                    <th>114 / 100</th>
+                </tr>
+                <tr>
+                    <th>Project 2</th>
+                    <th>100 / 100</th>
+                </tr>
+                <tr>
+                    <th>Final Grade</th>
+                    <th>A</th>
+                </tr>
+            </table>
+        </p>
     </body>
-    
 </html>
