sys_admin complete

--- a/sys_admin.html
+++ b/sys_admin.html
@@ -24,6 +24,7 @@
                     <li>Get the information on a single file such as format, size, and compression ratio based on user specified arguments</li>
                 </ol>
             </li>
+            <li>Revise the previous two bash scripts</li>
             <li>Add all commands learned to a cheat sheet throughout the semester.</li>
         </ol>
 
