All file content

--- a/networking.html
+++ b/networking.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Networking and Distributed Computing</h1>
+        <a href="index.html">Home</a>
         <h3>Table of Contents</h3>
         <ul>
             <li><a href="#homework">Homework</a></li>
@@ -42,7 +43,7 @@
                     <li>Create all RPC methods yourself and document the API accordingly</li>
                     <li>When the inventory system is shut down, use Python's pickle module to pickle the inventory into a file before termination</li>
                     <li>Create two demonstration clients acting with both servers that share a massive amount of argparse between them</li>
-                    <li>Time the client to server interactions in order to see that gRPC runs much faster then XML-RPC because of less network overhead</li>
+                    <li>Time the client to server interactions in order to see that gRPC runs much faster than XML-RPC because of less network overhead</li>
                     <li>Make sure that the program is screened on an AWS instance</li>
                 </ul>
             </li>
