--- a/sys_admin.html
+++ b/sys_admin.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>System Administration</h1>
+        <a href="index.html">Home</a>
         <h3>Table of Contents</h3>
         <ul>
             <li><a href="#homework">Homework</a></li>
