All file content

--- a/index.html
+++ b/index.html
@@ -12,16 +12,51 @@
             <li><a href="extra.html">Skills</a></li>
         </ul>
         <div>
-            <h1>My </h1>
+            <h1>Overview</h1>
             <p>
                 As a sophomore computer science major, I have been documenting my experiences and grades in my most challenging courses
                 upon completion. Most of this documentation includes:
                 <ul>
-                    <li>Assignments and Solutions</li>
+                    <li>Assignments</li>
                     <li>Projects and Goals</li>
-                    <li>Overviews</li>
+                    <li>Summaries</li>
                 </ul>
                 Aside from these attributes, I also keep track of my grade for each course and calculate my department GPA after a completed semester.
+                As of the beginning of my junior year (2020), my grades for all computer science classes are as follows:
+                <table>
+                    <tr>
+                        <th>Class</th>
+                        <th>Grade</th>
+                    </tr>
+                    <tr>
+                        <th>Computer Science 1 (Python)</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>Computer Science 2 (Java)</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>Data Structures and Analysis of Algorithms</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>System Administration</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>Computer Organization</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>Networking and Distributed Computing</th>
+                        <th>A</th>
+                    </tr>
+                    <tr>
+                        <th>Final Department GPA</th>
+                        <th>4.0</th>
+                    </tr>
+                </table>
             </p>
         </div>
     </body>
