--- a/networking.html
+++ b/networking.html
@@ -56,6 +56,7 @@
                 </ul>
             </li>
         </ol>
+        <img src="ahmdahls_law.png" alt=ahmdahls_law>
 
         <h3 id="summary">Summary</h3>
         <p>
