--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <h1>My Best Courses</h1>
+        <h1 class="name">My Best Courses</h1>
         <ul>
             <li><a href="sys_admin.html">System Administration</a></li>
             <li><a href="networking.html">Networking and Distributed Computing</a></li>
             <li><a href="operations.html">Operations Research</a></li>
         </ul>
         <div>
-            <h1>Overview</h1>
+            <h1 class="name">Overview</h1>
             <p>
                 As a sophomore computer science major, I have been documenting my experiences and grades in my most challenging courses
                 upon completion. Most of this documentation includes:
