--- a/networking.html
+++ b/networking.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Networking</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Networking and Distributed Computing</h1>
@@ -13,7 +14,7 @@
             <li><a href="#summary">Summary</a></li>
         </ul>
 
-        <h3 id="homework">Homework</h3>
+        <h3 id="homework" class="name">Homework</h3>
             <ol>
                 <li>
                     Created a command-line program to transfer files from one computer to another computer
@@ -26,7 +27,7 @@
                 <li>Create a client to a WordPress XML-RPC server supporting numerous different methods as well as making the client accessible from the command line using Python's argparse module</li>
                 <li>Establish a gRPC server on a raspberry pi to monitor its own temperature and report values to a client</li>
             </ol>
-        <h3 id="projects">Projects</h3>
+        <h3 id="projects" class="name">Projects</h3>
         <ol>
             <li>
                 Implement two chat systems over the network using the server-client TCP model and the peer-to-peer UDP model
@@ -58,7 +59,7 @@
         </ol>
         <img src="amdahls_law.jpg" alt="amdahls_law">
 
-        <h3 id="summary">Summary</h3>
+        <h3 id="summary" class="name">Summary</h3>
         <p>
             Overall, I thoroughly enjoyed this class. I loved working with Python for the whole semester and gaining a deeper knowledge of the languages capabilities. And of course
             I enjoyed being able to understand server-client models and connections as well as distributed systems.
