--- a/operations.html
+++ b/operations.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Operations Research</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Mathematical Methods of Operations Research</h1>
@@ -12,7 +13,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#summary">Summary</a></li>
         </ul>
-        <h3 id="homework">Homework Concepts</h3>
+        <h3 id="homework" class="name">Homework Concepts</h3>
         <ol>
             <li>Create multiple linear programming models mainly by using Python</li>
             <li>Learn how to optimize the use of resources in a work environment based on cost of material and time factors</li>
@@ -20,13 +21,13 @@
             <li>Gain experience with duality and sensitivity analysis to determine how volatile the ratio of profit to material is</li>
         </ol>
 
-        <h3 id="projects">Projects</h3>
+        <h3 id="projects" class="name">Projects</h3>
         <ol>
             <li>Research project where I analyzed the operations research techniques of loading and unloading people on trains in India</li>
             <li>Attempt at optimizing the spatial capacity of parking lots at school using a linear programming model</li>
         </ol>
 
-        <h3 id="summary">Summary</h3>
+        <h3 id="summary" class="name">Summary</h3>
         <p>This course was one of the more difficult courses for me because it was hard to see exactly where these techniques and processes were 
         being applied. This class was very intense in the study of different algorithms which is great knowledge to have, but I don't think 
         I'll really use most of this information later on. My final grades are as follows:
