--- a/sys_admin.html
+++ b/sys_admin.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>System Administration</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>System Administration</h1>
@@ -13,7 +14,7 @@
             <li><a href="#summary">Summary</a></li>
         </ul>
 
-        <h3 id="homework">Homework</h3>
+        <h3 id="homework" class="name">Homework</h3>
         <ol>
             <li>List different attributes, such as package manager, price, and target audience for different Linux distributions</li>
             <li>Gain practice with commands like cd, ls, find, grep, du, wc, head, tail, and tar as well as gain a general understanding of the format of bash commands</li>
@@ -29,7 +30,7 @@
             <li>Add all commands learned to a cheat sheet throughout the semester.</li>
         </ol>
 
-        <h3 id="projects">Projects</h3>
+        <h3 id="projects" class="name">Projects</h3>
         <ol>
             <li>
                 Install a JupyterHub server on a Fedora VirtualBox instance with the following configurations:
@@ -50,7 +51,7 @@
             </li>
         </ol>
 
-        <h3 id="summary">Summary</h3>
+        <h3 id="summary" class="name">Summary</h3>
         <p>
             My time in this class was amazing even though the last project was extremely taxing to complete. I believe that I learned a lot 
             about the bash terminal and bash scripting as well as how to configure services and software on my computer. 
