--- a/sys_admin.html
+++ b/sys_admin.html
@@ -17,7 +17,7 @@
         <h3 id="homework" class="name">Homework</h3>
         <ol>
             <li>List different attributes, such as package manager, price, and target audience for different Linux distributions</li>
-            <li>Gain practice with commands like cd, ls, find, grep, du, wc, head, tail, and tar as well as gain a general understanding of the format of bash commands</li>
+            <li>Gain practice with commands like <span id=italics>cd, ls, find, grep, du, wc, head, tail, and tar</span> well as gain a general understanding of the format of bash commands</li>
             <li>Gain experience in account management by creating accounts on a Fedora VirtualBox and editing priviledges, setting up SSH, and modifying skeleton directories</li>
             <li>
                 Write 2 bash scripts:
