--- a/operations.html
+++ b/operations.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Mathematical Methods of Operations Research</h1>
         <a href="index.html">Home</a>
-        <h3>Table of Contents</h3>
+        <h3 class="name">Table of Contents</h3>
         <ul>
             <li><a href="#homework">Homework</a></li>
             <li><a href="#projects">Projects</a></li>
