--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>My Webpage</title>
     </head>
     <body>
+        <link rel="stylesheet" href="style.css">
         <h1 class="name">My Best Courses</h1>
         <ul>
             <li><a href="sys_admin.html">System Administration</a></li>
