fixed initial table

--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
                         <th>A</th>
                     </tr>
                     <tr>
+                        <th>Database Systems</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Web Programming</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Graphics</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Software Testing</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Software Engineering</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Operating Systems</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Capstone System Design</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
+                        <th>Image Processing</th>
+                        <th>---</th>
+                    </tr>
+                    <tr>
                         <th>Final Department GPA</th>
                         <th>4.0</th>
                     </tr>
