fixed the links

--- a/3dprint.html
+++ b/3dprint.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
+        <a href="index.html">Home</a>
         <div class="alert alert-info" role="alert">
             Check out our efforts at our 3D printing website <a href="https://3d.moravian.edu/covid-19-prints">here!</a>
         </div>
