--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="sys_admin.html">System Administration</a></li>
             <li><a href="networking.html">Networking and Distributed Computing</a></li>
             <li><a href="operations.html">Operations Research</a></li>
+            <li><a href="3dprint.html">3D Printing</a></li>
         </ul>
         <div>
             <h1 class="name">Overview</h1>
