--- a/3dprint.html
+++ b/3dprint.html
@@ -3,10 +3,11 @@
     <head>
         <title>3D printing</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body>
+        <h1>3D Printing</h1>
         <a href="index.html">Home</a>
         <div class="alert alert-info" role="alert">
             Check out our efforts at our 3D printing website <a href="https://3d.moravian.edu/covid-19-prints">here!</a>
@@ -14,16 +15,16 @@
         <h1>3D Printed Pieces</h1>
         <div class="grid">
             <div class="grid-item">
-                <img src="3Dprinter.HEIC" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
+                <img src="3Dprinter.jpg" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
             </div>
             <div class="grid-item">
-                <img src="ultimaker.HEIC" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
+                <img src="ultimaker.jpg" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
             </div>
             <div class="grid-item">
-                <img src="stethoscopes.HEIC" alt="Unassembled stethoscopes">
+                <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
             </div>
             <div class="grid-item">
-                <img src="face_shields.HEIC" alt="Assembled face_shields">
+                <img src="face_shields.jpg" alt="Assembled face_shields">
             </div>
         </div>
         <div>
