--- a/3dprint.html
+++ b/3dprint.html
@@ -8,8 +8,10 @@
         <style>
             img {
                 display: block;
-                margin-left: auto;
-                margin-right: auto
+                /* margin-left: auto;
+                margin-right: auto; */
+                max-width: 100%;
+                max-height: 100%;
             }
         </style>
     </head>
