--- a/3dprint.html
+++ b/3dprint.html
@@ -22,20 +22,26 @@
             Check out our efforts at our 3D printing website <a href="https://3d.moravian.edu/covid-19-prints">here!</a>
         </div>
         <h1>3D Printed Pieces</h1>
-        <div class="grid">
-            <div class="grid-item">
-                <img src="3Dprinter.jpg" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
+        
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="3Dprinter.jpg" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
+                </div>
+                <div class="col">
+                    <img src="ultimaker.jpg" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="ultimaker.jpg" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
-            </div>
-            <div class="grid-item">
-                <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
-            </div>
-            <div class="grid-item">
-                <img src="face_shields.jpg" alt="Assembled face_shields">
+            <div class="row">
+                <div class="col">
+                    <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
+                </div>
+                <div class="col">
+                    <img src="face_shields.jpg" alt="Assembled face_shields">
+                </div>
             </div>
         </div>
+
         <div>
             <p>
                 Since April 1, 2020, we have been printing and assembling face shields and stethoscopes for the COVID-19 relief efforts.
