--- a/3dprint.html
+++ b/3dprint.html
@@ -8,10 +8,11 @@
         <style>
             img {
                 display: block;
-                /* margin-left: auto;
-                margin-right: auto; */
-                max-width: 10%;
-                max-height: 10%;
+                margin-left: auto;
+                margin-right: auto;
+                padding: 5 px;
+                max-width: 30%;
+                max-height: 30%;
             }
         </style>
     </head>
@@ -22,7 +23,7 @@
             Check out our efforts at our 3D printing website <a href="https://3d.moravian.edu/covid-19-prints">here!</a>
         </div>
         <h1>3D Printed Pieces</h1>
-        
+
         <div class="container">
             <div class="row">
                 <div class="col">
