--- a/3dprint.html
+++ b/3dprint.html
@@ -10,9 +10,9 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                padding: 5 px;
-                max-width: 30%;
-                max-height: 30%;
+                padding: 5px;
+                /* max-width: 75%;
+                max-height: 30%; */
             }
         </style>
     </head>
