--- a/3dprint.html
+++ b/3dprint.html
@@ -11,8 +11,8 @@
                 margin-left: auto;
                 margin-right: auto;
                 padding: 5px;
-                /* max-width: 75%;
-                max-height: 30%; */
+                max-width: 100%;
+                max-height: 100%;
             }
         </style>
     </head>
