--- a/3dprint.html
+++ b/3dprint.html
@@ -10,7 +10,7 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                padding: 5px;
+                /* padding: 5px; */
                 max-width: 100%;
                 max-height: 100%;
             }
