--- a/3dprint.html
+++ b/3dprint.html
@@ -10,7 +10,10 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                padding: 10px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                padding-right: 5px;
+                padding-left: 5px;
                 max-width: 100%;
                 max-height: 100%;
             }
@@ -28,17 +31,21 @@
             <div class="row">
                 <div class="col">
                     <img src="3Dprinter.jpg" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
+                    One of our smaller monoprice 3D printers printing Y tubes for the stethoscope eartubes
                 </div>
                 <div class="col">
                     <img src="ultimaker.jpg" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
+                    One of our larger ultimaker 3D printers printing the ear tubes for stethoscopes
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
+                    A picture of just some of our partially assembled stethoscopes
                 </div>
                 <div class="col">
                     <img src="face_shields.jpg" alt="Assembled face_shields">
+                    A picture of some of our assembled face shields
                 </div>
             </div>
         </div>
