--- a/3dprint.html
+++ b/3dprint.html
@@ -10,10 +10,13 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                padding-top: 10px;
-                padding-bottom: 10px;
+                /* padding-top: 10px;
+                padding-bottom: 10px; */
                 max-width: 100%;
                 max-height: 100%;
+            }
+            p {
+                padding-bottom: 5px;
             }
         </style>
     </head>
@@ -29,21 +32,21 @@
             <div class="row">
                 <div class="col">
                     <img src="3Dprinter.jpg" alt="Monoprice 3Dprinter printing Y tubes for stethoscopes">
-                    One of our smaller monoprice 3D printers printing Y tubes for the stethoscope eartubes
+                    <p>One of our smaller monoprice 3D printers printing Y tubes for the stethoscope eartubes</p>
                 </div>
                 <div class="col">
                     <img src="ultimaker.jpg" alt="Ultimaker 3D printer printing ear tubes for stethoscopes">
-                    One of our larger ultimaker 3D printers printing the ear tubes for stethoscopes
+                <p>One of our larger ultimaker 3D printers printing the ear tubes for stethoscopes</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
-                    A picture of just some of our partially assembled stethoscopes
+                    <p>A picture of just some of our partially assembled stethoscopes</p>
                 </div>
                 <div class="col">
                     <img src="face_shields.jpg" alt="Assembled face_shields">
-                    A picture of some of our assembled face shields
+                    <p>A picture of some of our assembled face shields</p>
                 </div>
             </div>
         </div>
