--- a/3dprint.html
+++ b/3dprint.html
@@ -24,9 +24,9 @@
         <h1>3D Printing</h1>
         <a href="index.html">Home</a>
         <div class="alert alert-info" role="alert">
-            Check out our efforts at our 3D printing website <a href="https://3d.moravian.edu/covid-19-prints">here!</a>
+            Check out our efforts at our 3D printing website <a class="btn btn-info" href="https://3d.moravian.edu/covid-19-prints" role="button">here!</a>
         </div>
-        <h1>3D Printed Pieces</h1>
+        <h1>3D Printed Products</h1>
 
         <div class="container">
             <div class="row">
