--- a/3dprint.html
+++ b/3dprint.html
@@ -17,6 +17,7 @@
             }
             p {
                 padding-bottom: 5px;
+                text-align: center;
             }
         </style>
     </head>
@@ -24,7 +25,7 @@
         <h1>3D Printing</h1>
         <a href="index.html">Home</a>
         <div class="alert alert-info" role="alert">
-            Check out our efforts at our 3D printing website <a class="btn btn-info" href="https://3d.moravian.edu/covid-19-prints" role="button">here!</a>
+            Check out our efforts at our 3D printing website: <a class="btn btn-info" href="https://3d.moravian.edu/covid-19-prints" role="button">Click here!</a>
         </div>
         <h1>3D Printed Products</h1>
 
