--- a/3dprint.html
+++ b/3dprint.html
@@ -17,6 +17,8 @@
             }
             p {
                 padding-bottom: 5px;
+                padding-left: 5px;
+                padding-right: 5px;
                 text-align: center;
             }
         </style>
