--- a/3dprint.html
+++ b/3dprint.html
@@ -3,23 +3,15 @@
     <head>
         <title>3D printing</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <link rel="stylesheet" href="style.css"> -->
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <style>
             img {
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                /* padding-top: 10px;
-                padding-bottom: 10px; */
                 max-width: 100%;
                 max-height: 100%;
-            }
-            p {
-                padding-bottom: 5px;
-                padding-left: 5px;
-                padding-right: 5px;
-                text-align: center;
             }
         </style>
     </head>
