--- a/operations.html
+++ b/operations.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Mathematical Methods of Operations Research</h1>
+        <a href="index.html">Home</a>
         <h3 class="name">Table of Contents</h3>
         <ul>
             <li><a href="#homework">Homework</a></li>
