--- a/3dprint.html
+++ b/3dprint.html
@@ -37,11 +37,11 @@
             <div class="row">
                 <div class="col">
                     <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
-                    <p>A picture of just some of our partially assembled stethoscopes</p>
+                    <p>Just some of our partially assembled stethoscopes</p>
                 </div>
                 <div class="col">
                     <img src="face_shields.jpg" alt="Assembled face_shields">
-                    <p>A picture of some of our assembled face shields</p>
+                    <p>Just some of our assembled face shields</p>
                 </div>
             </div>
         </div>
