--- a/operations.html
+++ b/operations.html
@@ -14,18 +14,22 @@
             <li><a href="#summary">Summary</a></li>
         </ul>
         <h3 id="homework" class="name">Homework Concepts</h3>
-        <ol>
-            <li>Create multiple linear programming models mainly by using Python</li>
-            <li>Learn how to optimize the use of resources in a work environment based on cost of material and time factors</li>
-            <li>Practice using the simplex method to solve issues with linear programming</li>
-            <li>Gain experience with duality and sensitivity analysis to determine how volatile the ratio of profit to material is</li>
-        </ol>
+        <div>
+            <ol>
+                <li>Create multiple linear programming models mainly by using Python</li>
+                <li>Learn how to optimize the use of resources in a work environment based on cost of material and time factors</li>
+                <li>Practice using the simplex method to solve issues with linear programming</li>
+                <li>Gain experience with duality and sensitivity analysis to determine how volatile the ratio of profit to material is</li>
+            </ol>
+        </div>
 
         <h3 id="projects" class="name">Projects</h3>
-        <ol>
-            <li>Research project where I analyzed the operations research techniques of loading and unloading people on trains in India</li>
-            <li>Attempt at optimizing the spatial capacity of parking lots at school using a linear programming model</li>
-        </ol>
+        <div>
+            <ol>
+                <li>Research project where I analyzed the operations research techniques of loading and unloading people on trains in India</li>
+                <li>Attempt at optimizing the spatial capacity of parking lots at school using a linear programming model</li>
+            </ol>
+        </div>
 
         <h3 id="summary" class="name">Summary</h3>
         <p>This course was one of the more difficult courses for me because it was hard to see exactly where these techniques and processes were 
