--- a/3dprint.html
+++ b/3dprint.html
@@ -28,11 +28,11 @@
             <div class="row">
                 <div class="col">
                     <img src="stethoscopes.jpg" alt="Unassembled stethoscopes">
-                    <p>Just some of our partially assembled stethoscopes</p>
+                    <p>Some of our partially assembled stethoscopes</p>
                 </div>
                 <div class="col">
                     <img src="face_shields.jpg" alt="Assembled face_shields">
-                    <p>Just some of our assembled face shields</p>
+                    <p>Some of our assembled face shields</p>
                 </div>
             </div>
         </div>
